feat(projects): testing other project

--- a/projects/ring-sizer.mdx
+++ b/projects/ring-sizer.mdx
@@ -1,11 +1,11 @@
 ---
-title: Chupi Order Tracking
+title: Chupi Digital Ring Sizer
 date: 'August 4, 2021'
-description: Bespoke order tracking to carry a hand-made brand past the point of purchase
+description: A digital interface to get the real-life measurement of any ring size.
 tags: ['0-1', 'Design', 'Build']
 at: 'Chupi'
-related: ['ring-sizer']
-position: 1
+related: ['ring-finder']
+position: 2
 ---
 
 # Chupi Order Tracking
