refactor(projects): removing placeholder and old cards

--- a/projects/listen-list.mdx
+++ b/projects/listen-list.mdx
@@ -1,17 +1,14 @@
 ---
-title: Chupi Digital Ring Sizer
-date: 'August 4, 2021'
-description: A digital interface to get the real-life measurement of any ring size.
+title: Listen List
+date: 'April 30, 2022'
+description: A long-running open-source side project that allows users to save lists of albums they want to listen to.
 tags: ['0-1', 'Design', 'Build']
-at: 'Chupi'
-related: ['ring-finder']
-position: 2
+at: 'Side Project'
+position: 1
 ---
 
-# Chupi Order Tracking
-2021 at Chupi
-
-*Note: I can’t link to this project as it lives in the post-purchase flow. I have written up my process and approach, which is hopefully of some use!*
+# Personal Portfolio
+2022 Side Project
 
 ## Why do this?
 
