--- a/projects/personal-site.mdx
+++ b/projects/personal-site.mdx
@@ -1,17 +1,14 @@
 ---
-title: Chupi Order Tracking
-date: 'August 4, 2021'
-description: Bespoke order tracking to carry a hand-made brand past the point of purchase
+title: Personal Portfolio
+date: 'April 2, 2022'
+description: A write up of this website that you’re on now and the process I went through to design and develop it.
 tags: ['0-1', 'Design', 'Build']
-at: 'Chupi'
-related: ['ring-sizer']
+at: 'Side Project'
 position: 1
 ---
 
-# Chupi Order Tracking
-2021 at Chupi
-
-*Note: I can’t link to this project as it lives in the post-purchase flow. I have written up my process and approach, which is hopefully of some use!*
+# Personal Portfolio
+2022 Side Project
 
 ## Why do this?
 
